try fix flickering

--- a/src/assets/scss/layout/_honeycombs.scss
+++ b/src/assets/scss/layout/_honeycombs.scss
@@ -2,6 +2,7 @@
 
 .honeycombs {
   background-image: url('../img/design/honeycombs-bg.jpg');
+  background-color: rgba(0, 0, 0, 0.65);
   background-repeat: no-repeat;
   background-size: cover;
   padding-block: u.rem(50);
